# sgl2020

./: README.md  pyproject.toml
example/: main.py
sgl2020/: __init__.py  data_resource.py  data_wrapping.py
sgl2020/desciptions/: Flt1003_readme.txt  Flt1006_readme.txt
sgl2020/descriptions/: __init__.py  _flight.py  _flt1002.py  _flt1003.py  _flt1004.py  _flt1005.py  _flt1006.py  _flt1007.py  _sensor.py
sgl2020/descriptions/raw/: Flt1002_readme.txt  Flt1004_readme.txt  Flt1005_readme.txt  Flt1007_readme.txt  pilot_comments.csv  sgl_2020_fields_readme.txt
sgl2020/utils/: converter.py
