[project]
name = "sgl2020"
version = "0.0.1"
description = "Data Wrapper for SGL2020 Aeromagnetic Survey"
requires-python = ">=3.9"
dependencies = ["numpy", "h5py", "pandas", "loguru", "pooch", "deinterf"]
authors = [{ name = "dorian", email = "dorian.li@outlook.com" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
